--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
       });
   
       function abrirAplicacionAndroid(){
-        console.log("hola");
-        window.open('null')
+        
+        window.open('https://drive.google.com/file/d/1gCP1cJEsUk9jNx3hf0jZEGzGwJENeErY/view?usp=sharing')
       }
   
       function envairMensaje(e){
