--- a/index.html
+++ b/index.html
@@ -312,8 +312,7 @@
       }
 
       function abrirIonicVideo(){
-        console.log("Aqui");
-        window.open('https://drive.google.com/file/d/1Exj20haxVXCzdopW6tXBk7zb-eSCk8Zc/view?ts=5fc555ce')
+        window.open('https://drive.google.com/file/d/1kGRvoi8F9au_URlGlA0O_nkmDpeRghYy/view')
       } 
   
       function envairMensaje(e){
